--- a/views/about.ejs
+++ b/views/about.ejs
@@ -37,6 +37,7 @@
                   <p class="my-2">
                     I am a software engineering student at the Technical University of Vienna.
                      I am passionate about programming and learning about new technologies that revolve around computers and software development.
+                     Currently, I am focused on web development and finding solutions using web technologies.
                   </p>
                 </div>
 
@@ -44,7 +45,8 @@
                   <h1 class="display-5 my-2">About this project</h1>
                   <p class="my-2">
                     Nagger is a web-based application that is designed to be used to set reminders for small and easily forgettable tasks that we face throughout the day,
-                    such as wishing happy birthday to a distant relative or an acquaintance.
+                    such as wishing happy birthday to a distant relative or an acquaintance. It is built on Node.js using the Express framework and backend rendering with EJS Templates.
+                    For the database it uses MySQL.
                   </p>
                 </div>
               
