--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="auto">
 <%- include('partials/head'); %>
 
-  <body data-bs-theme="dark">
+  <body data-bs-theme="light">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"></script>
@@ -10,15 +10,7 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"></script>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function () {
-
-        let params = new URLSearchParams(window.location.search);
-        let theme = params.get('theme');
-        checkTheme(theme);
-
-      }, false);
-    </script>
+    <script>setTheme()</script>
 
     <!-- top header-->
     <%- include('partials/header') %>
