--- a/views/partials/navdrawer.ejs
+++ b/views/partials/navdrawer.ejs
@@ -10,14 +10,14 @@
     <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
       <ul class="nav flex-column">
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-center gap-2 active" href="/home">
+          <a id="home-link" class="nav-link d-flex align-items-center gap-2 active" href="/home">
 
             Home
 
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-center gap-2 active" href="/account">
+          <a  id="account-link" class="nav-link d-flex align-items-center gap-2 active" href="/account">
 
             Account
 
@@ -25,7 +25,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-center gap-2" href="/setup">
+          <a id="setup-link" class="nav-link d-flex align-items-center gap-2" href="/setup">
 
             Setup
 
@@ -33,14 +33,14 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-center gap-2" href="/devices">
+          <a id="devices-link" class="nav-link d-flex align-items-center gap-2" href="/devices">
 
             Devices
 
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-center gap-2" href="/about">
+          <a id="about-link" class="nav-link d-flex align-items-center gap-2" href="/about">
 
             About
 
@@ -56,7 +56,7 @@
         </li> -->
         <hr class="my-2 mx-3">
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-center gap-2" href="/logout">
+          <a id="logout-link" class="nav-link d-flex align-items-center gap-2" href="/logout">
 
             Log out
 
