--- a/views/setup.ejs
+++ b/views/setup.ejs
@@ -10,23 +10,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
             integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
             crossorigin="anonymous"></script>
-        <script>
-            var theme;
-            document.addEventListener('DOMContentLoaded', function () {
 
-                let params = new URLSearchParams(window.location.search);
-                theme = params.get('theme');
-                checkTheme(theme);
-
-            }, false);
-
-
-            
-        </script>
-        <script type="module">
-            import { registerServiceWorker } from '/register-sw.js';
-            document.getElementById('enableNotificationsButton').addEventListener('click', registerServiceWorker);
-        </script>
+            <script>setTheme()</script>
         <%- include('partials/header') %>
 
             <div class="container-fluid" style="min-height: 40em;">
@@ -119,7 +104,7 @@
                                     </div>
                                 </div>
                                 <div style="margin:auto; display:flex; justify-content: center;" class="mt-4">
-                                <button class="btn btn-success my-4 mx-auto" id="enableNotificationsButton">Enable Notifications</button>
+                                <button class="btn btn-success my-4 mx-auto" <% if(set===true) { %> disabled <% } %> id="enableNotificationsButton">Enable Notifications</button>
                                 </div>
                                 <div class="alert alert-success d-none" id="success-alert">
                                     <h4 class="alert-heading">
