--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,41 +2,9 @@
 <html lang="en" data-bs-theme="auto">
 <%- include('partials/head'); %>
 <head>
-  <style>
-
-.required:after {
-    content:" *";
-    color: red;
-  }
-#register-form-container {
-      width: 100%;
-      margin: auto;
-    }
-    @media screen and (min-width:768px) {
-      #register-form-container {
-        width: 65%;
-        margin: auto;
-      }
-    }
-
-    @media screen and (min-width:992px) {
-      #register-form-container {
-        width: 50%;
-        margin: auto;
-      }
-    }
-
-    @media screen and (min-width:1400px) {
-      #register-form-container {
-        width: 30%;
-        margin: auto;
-      }
-    }
-
-
-  </style>
+  <link rel="stylesheet" href="form-styles.css">
 </head>
-<body data-bs-theme="dark">
+<body data-bs-theme="light">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
