Partially implemented password reset

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,10 +11,10 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"></script>
 
-      <script type="module" src="register-sw.js">
+      <script type="module" src="static/register-sw.js">
         </script>
 
-  <script src="home.js"></script>
+  <script src="static/home.js"></script>
   <script>setTheme()</script>
   
 
