--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="auto">
 <%- include('partials/head'); %>
 <head>
-  <link rel="stylesheet" href="form-styles.css">
+  <link rel="stylesheet" href="static/form-styles.css">
 </head>
 <body data-bs-theme="light">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -71,10 +71,6 @@
   <!-- Footer -->
     <%- include('partials/footer') %>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.2/dist/chart.umd.js"
-    integrity="sha384-eI7PSr3L1XLISH8JdDII5YN/njoSsxfbrkCTnJrzXt+ENP5MOVBxD+l6sEG4zoLp"
-    crossorigin="anonymous"></script>
-  <script src="dashboard.js"></script>
 </body>
 
 </html>
