--- a/views/new-password.ejs
+++ b/views/new-password.ejs
@@ -1,9 +1,6 @@
 <!doctype html>
-<html lang="en" data-bs-theme="auto">
+<html lang="en">
 <%- include('partials/head'); %>
-<head>
-  <link rel="stylesheet" href="static/form-styles.css">
-</head>
 <body data-bs-theme="light">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -11,7 +8,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
-
 
   <!-- top header-->
   <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow py-md-2" data-bs-theme="dark">
@@ -33,29 +29,16 @@
         
       <!-- Main Content -->
       <main class="col">
-        <div class="container mx-auto mt-4" id="register-form-container">
-          <form method="POST">
-            <h1 class="h3 mb-3 fw-normal">Log in</h1>
+        <div class="container mx-auto mt-4"  id="register-form-container">
+          <form method="POST" action="/passreset/set">
+            <h1 class="h3 mb-3 fw-normal">Reset Password</h1>
             
             <div class="mb-3 form-floating">
-              <input type="text" class="form-control" name="username" required id="email" aria-describedby="emailHelp"
-                placeholder="Enter email or username">
-              <label for="emailTextField" class="form-label">Email or Username</label>
+              <input type="password" class="form-control" name="password" minlength="8" required id="email" aria-describedby="emailHelp"
+                placeholder="Enter new password">
+              <label for="emailTextField" class="form-label">New password</label>
             </div>
-
-            <div class="mb-3 form-floating">
-              <input type="password" name="password" class="form-control" id="password" required placeholder="Password">
-              <label for="passwordTextField" class="form-label">Password</label>
-            </div>
-            <% if(invalidCredentials) { %>
-            <div class="mb-3">
-              <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                Invalid email or password.
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-              </div>
-            </div>
-            <% } %>
-            <button type="submit" class="btn btn-success">Log in</button><a href="/passreset" style="float:right" class="link-primary">Forgot password?</a>
+            <button type="submit" class="btn btn-success">Set password</button>
           </form>
         </div>
       </main>
