--- a/views/login.ejs
+++ b/views/login.ejs
@@ -40,12 +40,12 @@
             <div class="mb-3 form-floating">
               <input type="text" class="form-control" name="username" required id="email" aria-describedby="emailHelp"
                 placeholder="Enter email or username">
-              <label for="emailTextField" class="form-label">Email or Username</label>
+              <label for="email" class="form-label">Email or Username</label>
             </div>
 
             <div class="mb-3 form-floating">
               <input type="password" name="password" class="form-control" id="password" required placeholder="Password">
-              <label for="passwordTextField" class="form-label">Password</label>
+              <label for="password" class="form-label">Password</label>
             </div>
             <% if(invalidCredentials) { %>
             <div class="mb-3">
