--- a/views/pass-changed.ejs
+++ b/views/pass-changed.ejs
@@ -36,7 +36,7 @@
         <main class="col">
           <div class="container mx-auto mt-4" id="register-form-container">
             <h1 class="h3 mb-3 fw-normal text-center">Password changed</h1>
-            <a href="/login">Log in</a>
+            <p class="text-center"><a href="/login" class="text-center">Log in</a></p>
           </div>
         </main>
       </div>
