--- a/views/new-password.ejs
+++ b/views/new-password.ejs
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
 <%- include('partials/head'); %>
+<head>
+  <link rel="stylesheet" href="static/form-styles.css">
+  <link rel="icon" href="static/favicon.svg" type="image/svg+xml">
+</head>
 <body data-bs-theme="light">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
