--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,32 +1,37 @@
 <footer class="bg-body-tertiary py-4">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h5>Contact Us</h5>
-          <p>Email: contact@example.com</p>
-          <p>Phone: (123) 456-7890</p>
-          <p>Address: 123 Main Street, Anytown, USA</p>
-        </div>
-        <div class="col-md-4">
-          <h5>Quick Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="/about">About Me</a></li>
-            <li><a href="#">About this Project</a></li>
-
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <h5>Follow Us</h5>
-          <a href="#" class="me-2"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="me-2"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="me-2"><i class="fab fa-linkedin"></i></a>
-          <a href="#" class="me-2"><i class="fab fa-instagram"></i></a>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h5>Contact Us</h5>
+        <p>Email: contact@example.com</p>
+        <p>Phone: (123) 456-7890</p>
+        <p>Address: 123 Main Street, Anytown, USA</p>
       </div>
-      <div class="row mt-3">
-        <div class="col text-center">
-          <p class="mb-0">© 2024 Your Company Name. All rights reserved.</p>
-        </div>
+      <div class="col-md-4">
+        <h5>Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="/about">About Me</a></li>
+          <li><a href="#">About this Project</a></li>
+
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h5>Follow Us</h5>
+        <a href="#" class="me-2"><i class="fab fa-facebook"></i></a>
+        <a href="#" class="me-2"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="me-2"><i class="fab fa-linkedin"></i></a>
+        <a href="#" class="me-2"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
-  </footer>
+    <div class="row mt-3">
+      <div class="col text-center">
+        <p>&copy; 2024 Martin Dobrev. Licensed under
+          <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank">
+            GNU Affero General Public License (AGPL)
+            v3.0
+          </a>.
+          </p>
+      </div>
+    </div>
+  </div>
+</footer>
