--- a/views/invalid-token.ejs
+++ b/views/invalid-token.ejs
@@ -1,3 +1,6 @@
+
+<% //This page is displayed upon receiving an invalid or expired password reset token %>
+
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
 <%- include('partials/head'); %>
