--- a/views/new-password.ejs
+++ b/views/new-password.ejs
@@ -1,3 +1,6 @@
+
+<% //This form is opened from link sent to the user's email. Here a new password can be set  %>
+
 <!doctype html>
 <html lang="en">
 <%- include('partials/head'); %>
@@ -38,7 +41,7 @@
             <h1 class="h3 mb-3 fw-normal">Reset Password</h1>
             
             <div class="mb-3 form-floating">
-              <input type="password" class="form-control" name="password" minlength="8" required id="email" aria-describedby="emailHelp"
+              <input type="password" class="form-control" name="password" minlength="8" maxlength="49" required id="email" aria-describedby="emailHelp"
                 placeholder="Enter new password">
               <label for="emailTextField" class="form-label">New password</label>
             </div>
