--- a/views/pass-changed.ejs
+++ b/views/pass-changed.ejs
@@ -1,3 +1,6 @@
+
+<% //Upon successful change of password, this page is displayed %>
+
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
 <%- include('partials/head'); %>
