--- a/views/register.ejs
+++ b/views/register.ejs
@@ -37,18 +37,18 @@
             <h1 class="h3 mb-3 fw-normal">Register</h1>
             
             <div class="mb-3 form-floating">
-              <input type="text" class="form-control" required name="username" id="username" required minlength="3" placeholder="Username">
+              <input type="text" class="form-control" required name="username" id="username" required minlength="3" maxlength="99" placeholder="Username">
               <label for="usernameTextField" class="form-label">Username</label>
             </div>
             
             <div class="mb-3 form-floating">
-              <input type="email" class="form-control" required name="email" id="email" aria-describedby="emailHelp"
+              <input type="email" class="form-control" maxlength="99" required name="email" id="email" aria-describedby="emailHelp"
                 placeholder="Enter email">
               <label for="emailTextField" class="form-label">Email Address</label>
             </div>
 
             <div class="mb-3 form-floating">
-              <input type="password" class="form-control" name="password" id="password" required minlength="8" placeholder="Password">
+              <input type="password" class="form-control" name="password" id="password" required minlength="8" maxlength="49" placeholder="Password">
               <label for="passwordTextField" class="form-label">Password</label>
             </div>
 
