--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,9 +38,9 @@
             <h1 class="h3 mb-3 fw-normal">Log in</h1>
             
             <div class="mb-3 form-floating">
-              <input type="text" class="form-control" name="username" minlength="3" maxlength="99" required id="email" aria-describedby="emailHelp"
-                placeholder="Enter email or username">
-              <label for="email" class="form-label">Email or Username</label>
+              <input type="text" class="form-control" name="email" minlength="3" maxlength="99" required id="email" aria-describedby="emailHelp"
+                placeholder="Enter email">
+              <label for="email" class="form-label">Email</label>
             </div>
 
             <div class="mb-3 form-floating">
