--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,26 +1,26 @@
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
 <footer class="bg-body-tertiary py-4">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <h5>Contact Us</h5>
-        <p>Email: contact@example.com</p>
-        <p>Phone: (123) 456-7890</p>
-        <p>Address: 123 Main Street, Anytown, USA</p>
+        <h5>Contact</h5>
+        <p>Email: <a href="mailto:nagger.web@gmail.com">nagger.web@gmail.com</a></p>
       </div>
       <div class="col-md-4">
         <h5>Quick Links</h5>
         <ul class="list-unstyled">
           <li><a href="/about">About Me</a></li>
           <li><a href="#">About this Project</a></li>
+          <li><a href="#">Privacy Policy</a></li>
 
         </ul>
       </div>
       <div class="col-md-4">
-        <h5>Follow Us</h5>
-        <a href="#" class="me-2"><i class="fab fa-facebook"></i></a>
-        <a href="#" class="me-2"><i class="fab fa-twitter"></i></a>
+        <h5>Follow Me</h5>
         <a href="#" class="me-2"><i class="fab fa-linkedin"></i></a>
-        <a href="#" class="me-2"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="me-2"><i class="fab fa-github"></i></a>
       </div>
     </div>
     <div class="row mt-3">
