--- a/views/about.ejs
+++ b/views/about.ejs
@@ -37,8 +37,12 @@
                   <h1 class="display-5 my-2">About this project</h1>
                   <p class="my-2">
                     Nagger is a web-based application that is designed to be used to set reminders for small and easily forgettable tasks that we face throughout the day,
-                    such as wishing happy birthday to a distant relative or an acquaintance. It is built on Node.js using the Express framework and backend rendering with EJS Templates.
-                    For the database it uses MySQL.
+                    such as wishing happy birthday to a distant relative or an acquaintance. One must set up the browser to receive push notifications, which also adds the instance to a list of
+                    devices, associated with this particular account. In Devices tab, one can set a device to enabled or disabled, which in turn controls whether this device receives notification from Naggers.
+                    In the Home tab a Nagger can be added and later edited or deleted. The Title and Description will be visible in the notifications, which in turn get send on set interval that is customizable from the user.
+                    The Account tab shows account stats and provides a change password option.<p>
+                    When it comes to the technical part, this project is built on Node.js, using the Express framework. Front-end pages are rendered on the server with EJS Templates. For storing data it uses a MySQL Database. You can find 
+                    more about the details in my <a href="https://github.com/mrtindb" target="_blank">github</a> page.</p>
                   </p>
                 </div>
               
