--- a/views/new-password.ejs
+++ b/views/new-password.ejs
@@ -7,6 +7,12 @@
 <head>
   <link rel="stylesheet" href="static/form-styles.css">
   <link rel="icon" href="static/favicon.svg" type="image/svg+xml">
+  <script src="https://www.google.com/recaptcha/api.js"></script>
+  <script>
+    function onSubmit(token) {
+      document.getElementById("submit-form").submit();
+    }
+  </script>
 </head>
 <body data-bs-theme="light">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -37,7 +43,7 @@
       <!-- Main Content -->
       <main class="col">
         <div class="container mx-auto mt-4"  id="register-form-container">
-          <form method="POST" action="/passreset/set">
+          <form method="POST" action="/passreset/set" id="submit-form">
             <h1 class="h3 mb-3 fw-normal">Reset Password</h1>
             
             <div class="mb-3 form-floating">
@@ -45,7 +51,10 @@
                 placeholder="Enter new password">
               <label for="emailTextField" class="form-label">New password</label>
             </div>
-            <button type="submit" class="btn btn-success">Set password</button>
+            <button class="g-recaptcha btn btn-success" 
+            data-sitekey= "6Lfh6icqAAAAAJeo6_k1ecHiyiD6A3LNtSzYQPr2"
+            data-callback='onSubmit' 
+            data-action='submit'>Set password</button>
           </form>
         </div>
       </main>
