--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -11,16 +11,15 @@
       <div class="col-md-4">
         <h5>Quick Links</h5>
         <ul class="list-unstyled">
-          <li><a href="/about">About Me</a></li>
-          <li><a href="#">About this Project</a></li>
-          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="/about" id="about-footer-link">About</a></li>
+          <li><a href="static/Privacy_Policy_Nagger.pdf">Privacy Policy</a></li>
 
         </ul>
       </div>
       <div class="col-md-4">
         <h5>Follow Me</h5>
-        <a href="#" class="me-2"><i class="fab fa-linkedin"></i></a>
-        <a href="#" class="me-2"><i class="fab fa-github"></i></a>
+        <!--<a href="#" target="_blank" class="me-2"><i class="fab fa-linkedin"></i></a>-->
+        <a href="https://github.com/mrtindb" target="_blank" class="me-2"><i class="fab fa-github"></i></a>
       </div>
     </div>
     <div class="row mt-3">
