--- a/views/register.ejs
+++ b/views/register.ejs
@@ -68,7 +68,7 @@
             <% } %>
 
             <button class="g-recaptcha btn btn-success" 
-            data-sitekey= "6Lfh6icqAAAAAJeo6_k1ecHiyiD6A3LNtSzYQPr2"
+            data-sitekey= "<%= siteKey %>"
             data-callback='onSubmit' 
             data-action='submit'>Create Account</button>
           </form>
