--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,12 @@
 <%- include('partials/head'); %>
 <head>
   <link rel="stylesheet" href="static/form-styles.css">
+  <script src="https://www.google.com/recaptcha/api.js"></script>
+  <script>
+    function onSubmit(token) {
+      document.getElementById("submit-form").submit();
+    }
+  </script>
 </head>
 <body data-bs-theme="light">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -34,7 +40,7 @@
       <!-- Main Content -->
       <main class="col">
         <div class="container mx-auto mt-4" id="register-form-container">
-          <form method="POST">
+          <form id="submit-form" method="POST">
             <h1 class="h3 mb-3 fw-normal">Log in</h1>
             
             <div class="mb-3 form-floating">
@@ -50,12 +56,17 @@
             <% if(invalidCredentials) { %>
             <div class="mb-3">
               <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                Invalid email or password.
+                <%= errorMessage %>
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
               </div>
             </div>
             <% } %>
-            <button type="submit" class="btn btn-success">Log in</button><a href="/passreset" style="float:right" class="link-primary">Forgot password?</a>
+
+            <button class="g-recaptcha btn btn-success" 
+            data-sitekey= "<%= siteKey %>"
+            data-callback='onSubmit' 
+            data-action='submit'>Login</button>
+            <a href="/passreset" style="float:right" class="link-primary">Forgot password?</a>
           </form>
         </div>
       </main>
