--- a/views/passreset.ejs
+++ b/views/passreset.ejs
@@ -1,68 +1,70 @@
-
 <% //This page is displayed upon clicking the 'forgot password' link. Here the user must provide an email for a reset link %>
 
-<!doctype html>
-<html lang="en" data-bs-theme="auto">
-<%- include('partials/head'); %>
+  <!doctype html>
+  <html lang="en" data-bs-theme="auto">
+  <%- include('partials/head'); %>
 
-  <head>
-    <link rel="stylesheet" href="static/form-styles.css">
-  </head>
+    <head>
+      <link rel="stylesheet" href="static/form-styles.css">
+      <script src="https://www.google.com/recaptcha/api.js?render=6Lfh6icqAAAAAJeo6_k1ecHiyiD6A3LNtSzYQPr2"></script>
+    </head>
 
-  <body data-bs-theme="light">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"></script>
-    <script src="static/reset-password.js"></script>
+    <body data-bs-theme="light">
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 
-    <!-- top header-->
-    <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow py-md-2" data-bs-theme="dark">
-      <a style="text-decoration: none;" class="navbar-brand col-4 col-md-3 col-lg-2 my-1 px-3 py-2 text-white h-1"
-        href="/home">Nagger</a>
-      <div class="col-6 col-md-7 col-lg-8 my-1 px-3 py-2 text-white text-end">
-        <a href="/login" style="text-decoration: none;" class="mx-1 text-white">Log in</a>
-        <a href="/register" style="text-decoration: none;" class="mx-1 text-white">Register</a>
+      <script src="static/reset-password.js"></script>
+
+
+      <!-- top header-->
+      <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow py-md-2" data-bs-theme="dark">
+        <a style="text-decoration: none;" class="navbar-brand col-4 col-md-3 col-lg-2 my-1 px-3 py-2 text-white h-1"
+          href="/home">Nagger</a>
+        <div class="col-6 col-md-7 col-lg-8 my-1 px-3 py-2 text-white text-end">
+          <a href="/login" style="text-decoration: none;" class="mx-1 text-white">Log in</a>
+          <a href="/register" style="text-decoration: none;" class="mx-1 text-white">Register</a>
+        </div>
+        </ul>
+
+      </header>
+      <!-- Main Container -->
+      <div class="container-fluid" style="min-height: 30em;">
+
+        <div class="row">
+
+          <!-- Navbar/Navdrawer -->
+
+          <!-- Main Content -->
+          <main class="col">
+            <div class="container mx-auto mt-4" id="register-form-container">
+              <form>
+                <h1 class="h3 mb-3 fw-normal">Reset Password</h1>
+
+                <div class="mb-3 form-floating">
+                  <input type="text" minlength="3" maxlength="99" class="form-control" name="username" required
+                    id="email" aria-describedby="emailHelp" placeholder="Enter email or username">
+                  <label for="emailTextField" class="form-label">Email</label>
+                </div>
+                <div class="alert alert-success d-none" id="sent-alert">
+                  <p class="alert-body" style="margin:0">
+                    If an account assoicated with the given email exists,
+                    we will send an email with instructions to reset your password.
+                  </p>
+                </div>
+                <button type="button" class="btn btn-success" onclick="resetPassword()">Send</button>
+              </form>
+            </div>
+          </main>
+        </div>
       </div>
-      </ul>
 
-    </header>
-    <!-- Main Container -->
-    <div class="container-fluid" style="min-height: 30em;">
+      <!-- Footer -->
+      <%- include('partials/footer') %>
 
-      <div class="row">
+    </body>
 
-        <!-- Navbar/Navdrawer -->
-
-        <!-- Main Content -->
-        <main class="col">
-          <div class="container mx-auto mt-4" id="register-form-container">
-            <form>
-              <h1 class="h3 mb-3 fw-normal">Reset Password</h1>
-
-              <div class="mb-3 form-floating">
-                <input type="text" minlength="3" maxlength="99" class="form-control" name="username" required id="email" aria-describedby="emailHelp"
-                  placeholder="Enter email or username">
-                <label for="emailTextField" class="form-label">Email</label>
-              </div>
-              <div class="alert alert-success d-none" id="sent-alert">
-                <p class="alert-body" style="margin:0">
-                  If an account assoicated with the given email exists,
-                  we will send an email with instructions to reset your password.
-                </p>
-              </div>
-              <button type="button" class="btn btn-success" onclick="resetPassword()">Send</button>
-            </form>
-          </div>
-        </main>
-      </div>
-    </div>
-
-    <!-- Footer -->
-    <%- include('partials/footer') %>
-
-  </body>
-
-</html>
+  </html>
