--- a/views/register.ejs
+++ b/views/register.ejs
@@ -44,7 +44,7 @@
             
             <div class="mb-3 form-floating">
               <input type="text" class="form-control" required name="username" id="username" required minlength="3" maxlength="99" placeholder="Username">
-              <label for="usernameTextField" class="form-label">Name, Surname</label>
+              <label for="usernameTextField" class="form-label">Name</label>
             </div>
             
             <div class="mb-3 form-floating">
