--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -24,11 +24,7 @@
     </div>
     <div class="row mt-3">
       <div class="col text-center">
-        <p>&copy; 2024 Martin Dobrev. Licensed under
-          <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank">
-            GNU Affero General Public License (AGPL)
-            v3.0
-          </a>.
+        <p>&copy; 2024 Martin Dobrev
           </p>
       </div>
     </div>
